use "new salsa"

--- a/components/dada-lex/Cargo.toml
+++ b/components/dada-lex/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 
 [dependencies]
 peg = "0.7.0"
-salsa = "0.16.1"
+salsa = { path = "../salsa" }
 im = "15"
+dada-manifest = { path = "../dada-manifest" }
