--- a/components/salsa/Cargo.toml
+++ b/components/salsa/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "dada"
+name = "salsa"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-peg = "0.7.0"
-dada-lex = { path = "components/dada-lex" }
+salsa-entity-mock = { git = "https://github.com/nikomatsakis/salsa/", branch = "entity" }
