--- a/components/dada-manifest/Cargo.toml
+++ b/components/dada-manifest/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "dada"
+name = "dada-manifest"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-peg = "0.7.0"
-dada-lex = { path = "components/dada-lex" }
+salsa = { path = "../salsa" }
