--- a/components/dada-lex/Cargo.toml
+++ b/components/dada-lex/Cargo.toml
@@ -10,3 +10,4 @@ peg = "0.7.0"
 salsa = { path = "../salsa" }
 im = "15"
 dada-manifest = { path = "../dada-manifest" }
+dada-ast = { path = "../dada-ast" }
