--- a/components/dada-parse/Cargo.toml
+++ b/components/dada-parse/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "dada"
+name = "dada-parse"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-peg = "0.7.0"
-dada-lex = { path = "components/dada-lex" }
-dada-parse = { path = "components/dada-parse" }
+salsa = { path = "../salsa" }
+im = "15"
+dada-lex = { path = "../dada-lex" }
