--- a/components/dada-lex/Cargo.toml
+++ b/components/dada-lex/Cargo.toml
@@ -11,3 +11,4 @@ salsa = { path = "../salsa" }
 im = "15"
 dada-manifest = { path = "../dada-manifest" }
 dada-ast = { path = "../dada-ast" }
+dada-collections = { path = "../dada-collections" }
