--- a/components/dada-intern/Cargo.toml
+++ b/components/dada-intern/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "dada-collections"
+name = "dada-intern"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rustc-hash = "1.1.0"
-indexmap = "1.7.0"
+dada-collections = { path = "../dada-collections" }
+salsa = { path = "../salsa" }
