--- a/components/dada-ast/Cargo.toml
+++ b/components/dada-ast/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 salsa = { path = "../salsa" }
 im = "15"
-dada-intern = { path = "../dada-intern" }
+dada-id = { path = "../dada-id" }
