--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-peg = "0.7.0"
-dada-lex = { path = "components/dada-lex" }
-dada-parse = { path = "components/dada-parse" }
+dada-lsp = { path = "components/dada-lsp" }
