--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[test]]
+name = "harness"
+harness = false
+
 [dependencies]
 dada-lsp = { path = "components/dada-lsp" }
+lsp-server = "0.5.2"
+lsp-types = "0.83.1"
+serde_json = "1.0.72"
+serde = "1.0.131"
+eyre = "0.6.5"
