--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ lsp-types = "0.83.1"
 serde_json = "1.0.72"
 serde = "1.0.131"
 eyre = "0.6.5"
+
+[dev-dependencies]
+walkdir = "2.3.2"
+regex = "1.5.4"
+similar = "2.1.0"
