--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ harness = false
 
 [dependencies]
 dada-lsp = { path = "components/dada-lsp" }
+dada-ir = { path = "components/dada-ir" }
+dada-db = { path = "components/dada-db" }
 lsp-server = "0.5.2"
 lsp-types = "0.83.1"
 serde_json = "1.0.72"
