--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dada"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,9 +11,12 @@ harness = false
 
 [dependencies]
 ariadne = "0.1.3"
-dada-lsp = { path = "components/dada-lsp" }
-dada-ir = { path = "components/dada-ir" }
 dada-db = { path = "components/dada-db" }
+dada-collections = { path = "components/dada-collections" }
+dada-ir = { path = "components/dada-ir" }
+dada-lex = { path = "components/dada-lex" }
+dada-lsp = { path = "components/dada-lsp" }
+dada-manifest = { path = "components/dada-manifest" }
 lsp-server = "0.5.2"
 lsp-types = "0.83.1"
 serde_json = "1.0.72"
