--- a/components/dada-parse/Cargo.toml
+++ b/components/dada-parse/Cargo.toml
@@ -11,4 +11,5 @@ im = "15"
 dada-lex = { path = "../dada-lex" }
 dada-ir = { path = "../dada-ir" }
 dada-id = { path = "../dada-id" }
+dada-manifest = { path = "../dada-manifest" }
 stacker = "0.1.14"
