--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,20 +10,6 @@ name = "harness"
 harness = false
 
 [dependencies]
-ariadne = "0.1.3"
-dada-db = { path = "components/dada-db" }
-dada-collections = { path = "components/dada-collections" }
-dada-ir = { path = "components/dada-ir" }
-dada-lex = { path = "components/dada-lex" }
-dada-lsp = { path = "components/dada-lsp" }
-dada-manifest = { path = "components/dada-manifest" }
-lsp-server = "0.5.2"
-lsp-types = "0.83.1"
-serde_json = "1.0.72"
-serde = "1.0.131"
+dada-lang = { path = "components/dada-lang" }
 eyre = "0.6.5"
 structopt = "0.3"
-walkdir = "2.3.2"
-regex = "1.5.4"
-similar = "2.1.0"
-salsa = { path = "components/salsa" }
