--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -15,11 +15,12 @@ dada-lsp = { path = "../dada-lsp" }
 dada-manifest = { path = "../dada-manifest" }
 lsp-server = "0.5.2"
 lsp-types = "0.83.1"
-serde_json = "1.0.72"
-serde = "1.0.131"
 eyre = "0.6.5"
-structopt = "0.3"
-walkdir = "2.3.2"
 regex = "1.5.4"
+serde = "1.0.131"
+serde_json = "1.0.72"
 similar = "2.1.0"
 salsa = { path = "../salsa" }
+structopt = "0.3"
+tracing = "0.1.29"
+walkdir = "2.3.2"
