--- a/components/dada-brew/Cargo.toml
+++ b/components/dada-brew/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
-name = "dada-check"
+name = "dada-brew"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dada-brew = { path = "../dada-brew" }
 dada-ir = { path = "../dada-ir" }
-dada-lex = { path = "../dada-lex" }
-dada-manifest = { path = "../dada-manifest" }
-dada-parse = { path = "../dada-parse" }
 dada-validate = { path = "../dada-validate" }
+dada-parse = { path = "../dada-parse" }
 salsa = { path = "../salsa" }
