--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ dada-lang = { path = "components/dada-lang" }
 eyre = "0.6.5"
 structopt = "0.3"
 tracing-subscriber = "0.2"
+tokio = { version = "1", features = ["full"] }
