--- a/components/dada-execute/Cargo.toml
+++ b/components/dada-execute/Cargo.toml
@@ -10,6 +10,7 @@ arc-swap = "1.5.0"
 crossbeam = "0.8.1"
 dada-brew = { path = "../dada-brew" }
 dada-collections = { path = "../dada-collections" }
+dada-error-format = { path = "../dada-error-format" }
 dada-id = { path = "../dada-id" }
 dada-ir = { path = "../dada-ir" }
 dada-parse = { path = "../dada-parse" }
