Add GitHub actions workflows and bors.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+[workspace]
+members = [".", "components/*"]
+default-members = [".", "components/*"]
+
 [package]
 name = "dada"
 version = "0.1.0"
