--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ eyre = "0.6.5"
 structopt = "0.3"
 tracing-subscriber = "0.2"
 tokio = { version = "1", features = ["full"] }
+
+[workspace]
+members = ["components/dada-web"]
