--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -18,6 +18,7 @@ dada-manifest = { path = "../dada-manifest" }
 lsp-server = "0.5.2"
 lsp-types = "0.83.1"
 eyre = "0.6.5"
+parking_lot = "0.11.2"
 regex = "1.5.4"
 serde = "1.0.131"
 serde_json = "1.0.72"
