make classes work, tweak how logging is configured

--- a/components/dada-brew/Cargo.toml
+++ b/components/dada-brew/Cargo.toml
@@ -12,3 +12,4 @@ dada-ir = { path = "../dada-ir" }
 dada-validate = { path = "../dada-validate" }
 dada-parse = { path = "../dada-parse" }
 salsa = { path = "../salsa" }
+tracing = "0.1.29"
