--- a/components/dada-parse/Cargo.toml
+++ b/components/dada-parse/Cargo.toml
@@ -14,3 +14,4 @@ dada-id = { path = "../dada-id" }
 dada-manifest = { path = "../dada-manifest" }
 extension-trait = "1.0.0"
 stacker = "0.1.14"
+tracing = "0.1.29"
