support fn arguments

--- a/components/dada-validate/Cargo.toml
+++ b/components/dada-validate/Cargo.toml
@@ -10,5 +10,6 @@ dada-collections = { path = "../dada-collections" }
 dada-id = { path = "../dada-id" }
 dada-ir = { path = "../dada-ir" }
 dada-parse = { path = "../dada-parse" }
+extension-trait = "1"
 salsa = { path = "../salsa" }
 tracing = "0.1.29"
