--- a/components/dada-validate/Cargo.toml
+++ b/components/dada-validate/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 dada-collections = { path = "../dada-collections" }
 dada-id = { path = "../dada-id" }
 dada-ir = { path = "../dada-ir" }
+dada-lex = { path = "../dada-lex" }
 dada-parse = { path = "../dada-parse" }
 extension-trait = "1"
 salsa = { path = "../salsa" }
