--- a/components/dada-web/Cargo.toml
+++ b/components/dada-web/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 [dependencies]
 async-trait = "0.1.52"
 eyre = "0.6.5"
-parking_lot = "0.11.2"
+parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }
 wasm-bindgen = "0.2.78"
 wasm-bindgen-futures = "*"
 
