--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -14,6 +14,7 @@ dada-error-format = { path = "../dada-error-format" }
 dada-execute = { path = "../dada-execute" }
 dada-lex = { path = "../dada-lex" }
 dada-lsp = { path = "../dada-lsp" }
+ignore = "0.4.18"
 lsp-server = "0.5.2"
 lsp-types = "0.83.1"
 eyre = "0.6.5"
@@ -28,4 +29,3 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1.29"
 tracing-tree = "0.2.0"
 tracing-subscriber = { version = "0.3.3", default-features = false, features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"] }
-walkdir = "2.3.2"
