introduce Cusp statements and callback
This provides a hook *just before* a statement completes and
moves to its successor.

--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -12,6 +12,7 @@ dada-collections = { path = "../dada-collections" }
 dada-ir = { path = "../dada-ir" }
 dada-error-format = { path = "../dada-error-format" }
 dada-execute = { path = "../dada-execute" }
+dada-parse = { path = "../dada-parse" }
 dada-lex = { path = "../dada-lex" }
 dada-lsp = { path = "../dada-lsp" }
 ignore = "0.4.18"
