--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.52"
+dada-breakpoint = { path = "../dada-breakpoint" }
 dada-db = { path = "../dada-db" }
 dada-collections = { path = "../dada-collections" }
 dada-ir = { path = "../dada-ir" }
@@ -26,6 +27,7 @@ serde_json = "1.0.72"
 similar = "2.1.0"
 salsa = { path = "../salsa" }
 structopt = "0.3"
+thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.29"
 tracing-tree = "0.2.0"
