--- a/components/dada-web/ace/Makefile
+++ b/components/dada-web/ace/Makefile
@@ -1,6 +1,6 @@
 # there must be a better way to do this but wev
 
-all: ace.js theme-twilight.js ansi_up.js
+all: ace.js theme-twilight.js ansi_up.js viz.js
 
 ace.js:
 	curl https://raw.githubusercontent.com/ajaxorg/ace-builds/d979a82c6198802cfb6df5be236379d29f116b2d/src-noconflict/ace.js > $@
@@ -10,3 +10,6 @@ theme-twilight.js:
 
 ansi_up.js:
 	curl https://raw.githubusercontent.com/drudru/ansi_up/aa1627cbc4aababee74a2f55e7525a14610bbd74/ansi_up.js > ansi_up.js
+
+viz.js:
+	curl -L https://github.com/mdaines/viz.js/releases/download/v2.1.2/lite.render.js > viz.js
