--- a/components/dada-web/Cargo.toml
+++ b/components/dada-web/Cargo.toml
@@ -4,9 +4,12 @@ name = "dada-web"
 version = "0.1.0"
 [dependencies]
 async-trait = "0.1.52"
+console_error_panic_hook = "0.1.7"
 dada-breakpoint = { path = "../dada-breakpoint" }
 eyre = "0.6.5"
 parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }
+tracing = "0.1.29"
+tracing-wasm = "0.2.1"
 wasm-bindgen = "0.2.78"
 wasm-bindgen-futures = "*"
 
