Setup Visual Studio Code language support

--- a/.github/bors.toml
+++ b/.github/bors.toml
@@ -3,6 +3,7 @@ status = [
   "Test (nightly)",
   "Rustfmt",
   "Clippy (nightly)",
-  "Deploy"
+  "Deploy",
+  "Visual Studio Code"
 ]
 delete_merged_branches = true
