--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -25,5 +22,20 @@
             ],
             "cwd": "${workspaceFolder}"
         },
+        {
+            "type": "extensionHost",
+            "request": "launch",
+            "name": "Launch Dada Language Server",
+            "runtimeExecutable": "${execPath}",
+            "args": [
+                "--extensionDevelopmentPath=${workspaceRoot}/editors/vscode"
+            ],
+            "stopOnEntry": false,
+            "sourceMaps": true,
+            "outFiles": [
+                "${workspaceRoot}/editors/vscode/client/out/**/*.js"
+            ],
+            "preLaunchTask": "npm: watch"
+        }
     ]
 }
