Improve language support

--- a/editors/vscode/language-configuration.json
+++ b/editors/vscode/language-configuration.json
@@ -1,10 +1,6 @@
 {
 	"comments": {
-		"lineComment": "//",
-		"blockComment": [
-			"/*",
-			"*/"
-		]
+		"lineComment": "#"
 	},
 	"brackets": [
 		[
@@ -18,10 +14,6 @@
 		[
 			"(",
 			")"
-		],
-		[
-			"<",
-			">"
 		]
 	],
 	"colorizedBracketPairs": [
@@ -57,10 +49,6 @@
 			"notIn": [
 				"string"
 			]
-		},
-		{
-			"open": "/*",
-			"close": " */"
 		}
 	],
 	"autoCloseBefore": ";:.,=}])> \n\t",
@@ -78,27 +66,9 @@
 			")"
 		],
 		[
-			"<",
-			">"
-		],
-		[
 			"\"",
 			"\""
-		],
-		[
-			"'",
-			"'"
 		]
 	],
-	"wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)",
-	"indentationRules": {
-		"increaseIndentPattern": "^.*\\{[^}\"']*$|^.*\\([^\\)\"']*$",
-		"decreaseIndentPattern": "^\\s*(\\s*\\/[*].*[*]\\/\\s*)*[})]"
-	},
-	"folding": {
-		"markers": {
-			"start": "^\\s*//\\s*#?region\\b",
-			"end": "^\\s*//\\s*#?endregion\\b"
-		}
-	}
+	"wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
 }
