--- a/components/dada-ir/Cargo.toml
+++ b/components/dada-ir/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eq-float = "=0.1.0"
 salsa = { path = "../salsa" }
 dada-id = { path = "../dada-id" }
 dada-collections = { path = "../dada-collections" }
