separate reference files from debug files
- references files are checked and generated (blessed) on demand
- debug files are not checked, and always generated

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ target
 .vscode
 playground
 
-# Internal IR files used for reference
-syntax.ref
-validated.ref
-bir.ref
-lsp.ref
+# Internal IR files used for debugging
+syntax.debug
+validated.debug
+bir.debug
+lsp.debug
