--- a/extras/dada-web-react/package.json
+++ b/extras/dada-web-react/package.json
@@ -23,7 +23,7 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "sass": "^1.49.9",
     "typescript": "^4.1.6"
   },
