--- a/extras/Dada/package.json
+++ b/extras/Dada/package.json
@@ -18,9 +18,14 @@
     "@docusaurus/core": "2.0.0-beta.18",
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
+    "ace-builds": "^1.4.14",
+    "react-ace": "^9.5.0",
     "clsx": "^1.1.1",
+    "dada-web": "file:dada-web",
+    "graphviz-react": "^1.2.0",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
