--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -16,12 +16,14 @@ dada-execute = { path = "../dada-execute" }
 dada-parse = { path = "../dada-parse" }
 dada-lex = { path = "../dada-lex" }
 dada-lsp = { path = "../dada-lsp" }
+dada-repl = { path = "../dada-repl" }
 ignore = "0.4.18"
 lsp-server = "0.5.2"
 lsp-types = "0.83.1"
 eyre = "0.6.7"
 parking_lot = "0.11.2"
 regex = "1.5.4"
+rustyline = "9.1.2"
 serde = "1.0.131"
 serde_json = "1.0.72"
 similar = "2.1.0"
