--- a/extras/Dada/package.json
+++ b/extras/Dada/package.json
@@ -21,7 +21,7 @@
     "ace-builds": "^1.4.14",
     "react-ace": "^9.5.0",
     "clsx": "^1.1.1",
-    "dada-web": "file:dada-web",
+    "dada-web": "file:../../target/dada-web",
     "graphviz-react": "^1.2.0",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
