--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,24 @@ jobs:
         with:
           command: test
 
+  test:
+    name: Deploy
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust:
+          - nightly
+    steps:
+      - uses: actions/checkout@v2.4.0
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: xtask deploy
+
   rustfmt:
     name: Rustfmt
     runs-on: ubuntu-latest
