--- a/book/package.json
+++ b/book/package.json
@@ -19,14 +19,16 @@
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
     "ace-builds": "^1.4.14",
-    "react-ace": "^9.5.0",
     "clsx": "^1.1.1",
     "dada-web": "file:../target/dada-web",
     "graphviz-react": "^1.2.0",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
+    "react-ace": "^9.5.0",
     "react-bootstrap": "^2.2.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "remove-blank-lines": "^1.4.1",
+    "strip-indent": "^4.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.18",
