--- a/book/package.json
+++ b/book/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
     "ace-builds": "^1.4.14",
+    "ansi_up": "^5.1.0",
     "clsx": "^1.1.1",
     "dada-web": "file:../target/dada-web",
     "graphviz-react": "^1.2.0",
