--- a/book/package.json
+++ b/book/package.json
@@ -27,9 +27,7 @@
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-bootstrap": "^2.2.0",
-    "react-dom": "^17.0.2",
-    "remove-blank-lines": "^1.4.1",
-    "strip-indent": "^4.0.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.18",
