add --check flag to deploy, to run typecheck and format:check

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,7 +65,7 @@ jobs:
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: xtask 
-          args: deploy
+          args: deploy --check
 
   rustfmt:
     name: Rustfmt
