switch to the dada branch of salsa
salsa is evolving, we'll have to play catchup

--- a/components/salsa/Cargo.toml
+++ b/components/salsa/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-salsa-entity-mock = { git = "https://github.com/nikomatsakis/salsa/", branch = "entity" }
+salsa-entity-mock = { git = "https://github.com/nikomatsakis/salsa/", branch = "dada" }
 # salsa-entity-mock = { path = "../../../salsa/components/salsa-entity-mock" }
