--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,3 +109,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2.4.0
       - uses: crate-ci/typos@v1.0.4
+        with:
+          config: ./.typos.toml
