--- a/.typos.toml
+++ b/.typos.toml
@@ -1,4 +1,4 @@
 [files]
 extend-exclude = ["components/dada-web/ace/", "book/src/css/speech-bubbles.css", "book/package-lock.json"]
-[type.md.extend-words]
+[default.extend-words]
 fo = "fo"
