--- a/components/dada-execute/Cargo.toml
+++ b/components/dada-execute/Cargo.toml
@@ -16,6 +16,7 @@ dada-error-format = { path = "../dada-error-format" }
 dada-id = { path = "../dada-id" }
 dada-ir = { path = "../dada-ir" }
 dada-parse = { path = "../dada-parse" }
+dada-validate = { path = "../dada-validate" }
 eyre = "0.6.8"
 extension-trait = "1.0.1"
 generational-arena = "0.2.8"
