--- a/components/dada-validate/Cargo.toml
+++ b/components/dada-validate/Cargo.toml
@@ -11,6 +11,7 @@ dada-id = { path = "../dada-id" }
 dada-ir = { path = "../dada-ir" }
 dada-lex = { path = "../dada-lex" }
 dada-parse = { path = "../dada-parse" }
+derive-new = "0.5.9"
 eq-float = "=0.1.0"
 extension-trait = "1"
 itertools = "0.10.3"
