--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -40,6 +40,7 @@
     "languages": [
       {
         "id": "dada",
+        "configuration": "./language-configuration.json",
         "extensions": [
           ".dada"
         ],
