--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -24,9 +24,13 @@
     "onLanguage:dada"
   ],
   "scripts": {
-    "build": "tsc -b",
-    "package": "npx @vscode/vsce package -o dada.vsix"
-  },
+    "vscode:prepublish": "npm run build-base -- --minify",
+    "package": "npx @vscode/vsce package -o dada.vsix",
+    "build-base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
+    "build": "npm run build-base -- --sourcemap",
+    "build-watch": "npm run build-base -- --sourcemap --watch",
+    "test-compile": "tsc -p ./"
+},
   "dependencies": {
     "vscode-languageclient": "^8.1.0"
   },
@@ -34,6 +38,7 @@
     "@types/node": "^20.1.0",
     "@types/vscode": "^1.77.0",
     "@vscode/vsce": "^2.19.0",
+    "esbuild": "^0.17.18",
     "typescript": "^5.0.4"
   },
   "contributes": {
@@ -50,13 +55,15 @@
         ]
       }
     ],
-    "configuration":[
+    "configuration": [
       {
         "title": "Dada",
         "properties": {
           "dadaLanguageServer.compiler.executablePath": {
             "scope": "resource",
-            "type": ["string"],
+            "type": [
+              "string"
+            ],
             "default": "dada",
             "description": "Path to dada executable."
           }
