add basic syntax highlighting support

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -55,6 +55,13 @@
         ]
       }
     ],
+    "grammars": [
+      {
+        "language": "dada",
+        "scopeName": "source.dada",
+        "path": "./dada.tmLanguage.json"
+      }
+    ],
     "configuration": [
       {
         "title": "Dada",
