--- a/editors/code/tsconfig.eslint.json
+++ b/editors/code/tsconfig.eslint.json
@@ -1,7 +1,4 @@
 {
-    "extends": "./tsconfig.json",
-    "include": [
-        "src",
-        ".eslintrc.js"
-    ]
+  "extends": "./tsconfig.json",
+  "include": ["src", ".eslintrc.js"]
 }
