add Visual Studio Code to bors.toml

--- a/.github/bors.toml
+++ b/.github/bors.toml
@@ -4,6 +4,7 @@ status = [
   "Rustfmt",
   "Clippy (nightly)",
   "Deploy (nightly)",
+  "Visual Studio Code",
   "Typos"
 ]
 delete_merged_branches = true
