--- a/.github/workflows/editors.yml
+++ b/.github/workflows/editors.yml
@@ -22,5 +22,6 @@ jobs:
           node-version: 16
           cache: npm
           cache-dependency-path: "**/package-lock.json"
+      - run: npm ci
       - run: npm run lint
       - run: npm run package
