--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,5 @@ default-run = "dada"
 #harness = false
 
 [dependencies]
-anyhow = "1.0.86"
 dada-lang = { path = "components/dada-lang" }
-structopt = "0.3"
-tokio = { version = "1", features = ["full"] }
+dada-3p = { path = "components/dada-3p" }
