--- a/components/dada-3p/Cargo.toml
+++ b/components/dada-3p/Cargo.toml
@@ -8,3 +8,6 @@ anyhow = "1.0.86"
 structopt = "0.3.26"
 salsa = { git = "https://github.com/salsa-rs/salsa.git" }
 tokio = { version = "1.38.0", features = ["full"] }
+imstr = "0.2.0"
+fxhash = "0.2.1"
+indexmap = "2.2.6"
