--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dada-3p = { path = "../dada-3p" }
+dada-util = { version = "0.1.0", path = "../dada-util" }
 structopt = "0.3.26" # derive doesn't work without this
