--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,5 @@ harness = false
 dada-lang = { path = "components/dada-lang" }
 dada-util = { version = "0.1.0", path = "components/dada-util" }
 structopt = "0.3.26"
+thiserror = "1.0.63"
 tokio = { version = "1.38.0", features = ["full"] }
