--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -8,7 +8,9 @@ annotate-snippets = "0.11.4"
 dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
 indicatif = "0.17.8"
+lazy_static = "1.5.0"
 rayon = "1.10.0"
+regex = "1.10.6"
 run = "0.1.0"
 salsa = { git = "https://github.com/salsa-rs/salsa.git" }
 structopt = "0.3.26" # derive doesn't work without this
