--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -10,6 +10,7 @@ dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
 indicatif = "0.17.8"
 lazy_static = "1.5.0"
+prettydiff = "0.7.0"
 rayon = "1.10.0"
 regex = "1.10.6"
 run = "0.1.0"
