--- a/components/dada-util/Cargo.toml
+++ b/components/dada-util/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+dada-util-procmacro = { version = "0.1.0", path = "../dada-util-procmacro" }
 fxhash = "0.2.1"
 imstr = "0.2.0"
