--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 annotate-snippets = "0.11.4"
+dada-check = { version = "0.1.0", path = "../dada-check" }
 dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
