help diagnose stack overflows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ name = "harness"
 harness = false
 
 [dependencies]
+backtrace-on-stack-overflow = "0.3.0"
 dada-lang = { path = "components/dada-lang" }
 dada-util = { version = "0.1.0", path = "components/dada-util" }
 structopt = "0.3.26"
