--- a/components/dada-type-check/Cargo.toml
+++ b/components/dada-type-check/Cargo.toml
@@ -8,5 +8,6 @@ dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-ir-sym = { version = "0.1.0", path = "../dada-ir-sym" }
 dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
+futures = "0.3.31"
 salsa = { git = "https://github.com/salsa-rs/salsa.git" }
 typed-arena = "2.0.2"
