add embed crate for future use
We plan to embed the libdata sources.

--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -15,6 +15,7 @@ prettydiff = "0.7.0"
 rayon = "1.10.0"
 regex = "1.10.6"
 run = "0.1.0"
+rust-embed = "8.5.0"
 salsa = { git = "https://github.com/salsa-rs/salsa.git" }
 structopt = "0.3.26" # derive doesn't work without this
 thiserror = "1.0.63"
