--- a/components/dada-compiler/Cargo.toml
+++ b/components/dada-compiler/Cargo.toml
@@ -1,22 +1,12 @@
 [package]
-name = "dada-lang"
+name = "dada-compiler"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-annotate-snippets = "0.11.4"
 dada-check = { version = "0.1.0", path = "../dada-check" }
-dada-compiler = { version = "0.1.0", path = "../dada-compiler" }
 dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
-indicatif = "0.17.8"
-lazy_static = "1.5.0"
-prettydiff = "0.7.0"
-rayon = "1.10.0"
-regex = "1.10.6"
-run = "0.1.0"
 salsa = { git = "https://github.com/salsa-rs/salsa.git" }
-structopt = "0.3.26" # derive doesn't work without this
-thiserror = "1.0.63"
-walkdir = "2.5.0"
+rust-embed = "8.5.0"
