iterating towards wasm-based extension

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,16 +5,15 @@ FROM mcr.microsoft.com/devcontainers/base:bookworm
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
     && apt-get install -y nodejs
 
-# Install Rust
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-ENV PATH="/root/.cargo/bin:${PATH}"
-
-# Add the WASI target
-RUN rustup target add wasm32-wasip1
-
 # Install additional tools or dependencies if needed
 RUN npm install -g yo generator-code
 
-# Final use
 USER vscode
+
+# Install Rust and the wasm32-wasip1-threads target
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+ENV PATH="/home/vscode/.cargo/bin:${PATH}"
+RUN rustup install nightly
+RUN rustup target add wasm32-wasip1-threads
+
 
