--- a/components/xtask/Cargo.toml
+++ b/components/xtask/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eyre = "0.6.8"
 structopt = "0.3"
 tracing = "0.1.36"
 tracing-tree = "0.2.1"
 tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"] }
 xshell = "0.1"
+anyhow = "1.0.93"
